# VM

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: clang-format.cmake  googletest-download.cmake  googletest.cmake
researches/: virtual_machine.txt
src/: CMakeLists.txt  main.cpp
src/vm/: executor.cpp  executor.hpp  opcodes.hpp  state.hpp  string.hpp  type.cpp  type.hpp  value.cpp  value.hpp  virtual_machine.cpp  virtual_machine.hpp  virtualmachine.cpp  virtualmachine.hpp
src/vm/executor/: boolean_executables.cpp  conditional_executables.cpp  executor.cpp  executor.hpp  function_executables.cpp  global_executables.cpp  globals_executor.cpp  local_executables.cpp  locals_executables.cpp  number_executables.cpp  object_executables.cpp  string_executables.cpp
src/vm/function/: function.cpp  function.hpp  function_declaration.cpp  function_declaration.hpp
src/vm/memory/: chunk.hpp  memory.cpp  memory.hpp  object.hpp  string_memory_information.hpp
src/vm/object/: object.hpp  object_declaration.cpp  object_declaration.hpp
test/: CMakeLists.txt  mock_virtual_machine.hpp  test_boolean.cpp  test_booleans.cpp  test_chunk.cpp  test_conditional.cpp  test_conditionals.cpp  test_functions.cpp  test_globals.cpp  test_locals.cpp  test_memory.cpp  test_numbers.cpp  test_objects.cpp  test_string.cpp  test_strings.cpp  test_value_parser.cpp  test_virtual_machine.cpp
test/mocks/: mock_memory.hpp  mock_virtual_machine.hpp
